<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/content_main_txtvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/content_main_title"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/content_main_btnSpotify"
        android:layout_width="@dimen/content_main_button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/content_main_txtvTitle"
        android:text="@string/content_main_btn1"
        android:background="@color/buttonPrimary" />

    <Button
        android:id="@+id/content_main_btnScores"
        android:layout_width="@dimen/content_main_button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/content_main_btnSpotify"
        android:layout_marginTop="@dimen/content_main_button_marginTop"
        android:text="@string/content_main_btn2"
        android:background="@color/buttonPrimary"/>

    <Button
        android:id="@+id/content_main_btnLibrary"
        android:layout_width="@dimen/content_main_button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/content_main_btnScores"
        android:layout_marginTop="@dimen/content_main_button_marginTop"
        android:text="@string/content_main_btn3"
        android:background="@color/buttonPrimary"/>

    <Button
        android:id="@+id/content_main_btnBigger"
        android:layout_width="@dimen/content_main_button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/content_main_btnLibrary"
        android:layout_marginTop="@dimen/content_main_button_marginTop"
        android:text="@string/content_main_btn4"
        android:background="@color/buttonPrimary"/>

    <Button
        android:id="@+id/content_main_btnXYZ"
        android:layout_width="@dimen/content_main_button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/content_main_btnBigger"
        android:layout_marginTop="@dimen/content_main_button_marginTop"
        android:text="@string/content_main_btn5"
        android:background="@color/buttonPrimary"/>

    <Button
        android:id="@+id/content_main_btnCapstone"
        android:layout_width="@dimen/content_main_button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/content_main_btnXYZ"
        android:layout_marginTop="@dimen/content_main_button_marginTop"
        android:text="@string/content_main_btn6"
        android:textColor="@android:color/white"
        android:background="@color/buttonSecondary"/>
</RelativeLayout>
